Deprecate reshuffling part 2: Re-export X.Hidden.hs from deprecated X.hs
Deprecating the OsString modules in 1.4.200.0 had an unfortunate
side-effect: every symbol defined in such a module inherited the
deprecation status, even if the symbol itself was intended to be
stable.

To work around this, we move the definitions to new, unexposed, and
non-deprecated .Hidden modules. These definitions are then re-exported
from the original deprecated modules. This achieves the desired effect
of:

- Using a deprecated module results in a warning.
- Using an non-deprecated symbol originally defined in a deprecated
  module does __not__ receive a deprecation warning, provided it is
  imported from a non-deprecated module.

For example, the type EncodingException was originally defined in the
deprecated module System.OsPath.Encoding.Internal. This meant that
users would receive a deprecation warning for using it, even if they
imported it from a non-deprecated module e.g. System.OsPath.Encoding.

System.OsPath.Encoding.Internal has been renamed to the unexposed and
non-deprecated module System.OsPath.Encoding.Internal.Hidden. The
old System.OsPath.Encoding.Internal module retains its deprecation
warning and re-exports System.OsPath.Encoding.Internal.Hidden.

Thus:

- Importing EncodingException from System.OsPath.Encoding incurs no
  warnings.
- Importing System.OsPath.Encoding.Internal retains its deprecation.

The implementation strategy is, for each deprecated module X:

1. Rename X -> X.Hidden, removing the deprecation.
2. X now re-exports X.Hidden, adding the deprecation.

--- a/filepath.cabal
+++ b/filepath.cabal
@@ -77,11 +77,11 @@ library
     System.FilePath.Posix
     System.FilePath.Windows
     System.OsPath
-    System.OsPath.Data.ByteString.Short.Hidden
-    System.OsPath.Data.ByteString.Short.Internal.Hidden
-    System.OsPath.Data.ByteString.Short.Word16.Hidden
+    System.OsPath.Data.ByteString.Short
+    System.OsPath.Data.ByteString.Short.Internal
+    System.OsPath.Data.ByteString.Short.Word16
     System.OsPath.Encoding
-    System.OsPath.Encoding.Internal.Hidden
+    System.OsPath.Encoding.Internal
     System.OsPath.Internal
     System.OsPath.Posix
     System.OsPath.Posix.Internal
@@ -89,6 +89,16 @@ library
     System.OsPath.Windows
     System.OsPath.Windows.Internal
     System.OsString
+    System.OsString.Internal
+    System.OsString.Internal.Types
+    System.OsString.Posix
+    System.OsString.Windows
+
+  other-modules:
+    System.OsPath.Data.ByteString.Short.Hidden
+    System.OsPath.Data.ByteString.Short.Internal.Hidden
+    System.OsPath.Data.ByteString.Short.Word16.Hidden
+    System.OsPath.Encoding.Internal.Hidden
     System.OsString.Internal.Hidden
     System.OsString.Internal.Types.Hidden
     System.OsString.Posix.Hidden
